# weather-tg

./: .env.example  .gitignore  README.md  bot.py  config.py  handlers.py  pyproject.toml  receive_notification_request.py  send_notification.py
.github/workflows/: ci.yaml
bot/: bot.py  models.py
tests/: test_bot.py  test_notify_api.py  test_send_notification.py
