[project]
name = "weather-tg"
version = "0.1.0"
description = ""
authors = [
    {name = "dmhd6219",email = "svyatoslavsvyatkin@yandex.ru"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "aioresponses (>=0.7.8,<0.8.0)"
]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
bandit = "^1.8.3"
pytest-cov = "^6.1.1"

